fixed navbar collapse

--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@
     --color-light-blue: #41a5e7;
 }
 
-/*header {
-    background-color: var(--color-brand-primary);
-}*/
-
 html, body {
     margin: 0;
     padding: 0;
@@ -29,6 +25,10 @@ footer {
     background-color: rgba(182, 89, 27, 0.25);
     border: 1px solid rgba(228, 75, 15, 0.4);
     margin-top: 0.25em;
+}
+
+a {
+    color: var(--color-brand-contrast);
 }
     
 .card:hover {
